<resources>
    <string name="app_name">UPool</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title">Title</string>
    <string name="register">Register</string>
    <string name="departure_location">Leave from</string>
    <string name="destination_location">Destination</string>
    <string name="menu">Menu</string>
    <string name="log_out">Log Out</string>

    <string-array name="title_array">
        <item>Miss</item>
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Ms.</item>
        <item>Dr.</item>
    </string-array>
    <string name="title_activity_vehicle_request">Vehicle Request</string>

    <!--    Messages    -->
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude and longitude used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="no_location_data_provided">No location data provided</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!--    Database    -->
    <string name="db_users">users</string>
    <string name="db_user">user</string>
    <string name="db_user_title">userTitle</string>
    <string name="db_user_first_name">userFirstName</string>
    <string name="db_user_last_name">userLastName</string>
</resources>
