<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_image"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.upool.android.upool.Activities.SignInActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="3" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        app:srcCompat="@drawable/logo_u" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="7" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_edittext" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:onClick="SignUp"
                android:text="@string/sign_up"
                android:background="@drawable/rounded_button" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:onClick="SignIn"
                android:text="@string/sign_in"
                android:background="@drawable/rounded_button" />

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="2" />

</android.support.v7.widget.LinearLayoutCompat>
